--- a/frontend_safe/package.json
+++ b/frontend_safe/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "ethers": "^6.14.3",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.8",
     "vue": "^3.5.13"
   },
   "devDependencies": {
