--- a/frontend_safe/package.json
+++ b/frontend_safe/package.json
@@ -15,7 +15,8 @@
     "ethers": "^6.14.3",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.8",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
